[deploy r20180917130352] Fixing z-index on to-home link

--- a/_assets/css/app/header.sass
+++ b/_assets/css/app/header.sass
@@ -64,6 +64,7 @@
   padding: 20px
   text-decoration: none
   line-height: 1 !important
+  z-index: 1
   &:hover
     background-color: rgba(34,34,34,0.5)
     color: #fff
